fix dropdown menu alignment

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -217,7 +217,7 @@ html[lang=tr] {
     #nav.navbar {
         #menuitem1 {
             .dropdown-menu {
-                left: calc(50% - 135px);
+                left: 0;
             }
         }
 
